--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.8.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
